# visdriver

./: AGENTS.md  CMakeLists.txt  CODEX_TASKS.md  ISSUES.md  README.md  build_avs_testdata.sh  devtest_build.sh  devtest_run.sh
.ci/: ubuntu-packages.txt
.github/workflows/: clang-format.yml  linux-mingw.yml  windows-msvc.yml
docs/: toolbox-wine-prefix.md
for_codex/tests/: CMakeLists.txt  avs_core_tests.cpp  deterministic_render_test.cpp
for_codex/tests/data/: color_mod_classic.avs  extended_color_mod.avs  extended_header.avs  nested_list.avs  simple.avs
for_codex/tests/data/phase1/: README.md  fadeout_color.avs  nested_metadata.avs  superscope.avs
for_codex/tests/golden/: color_mod_hashes.txt  hashes.txt  superscope_hashes.txt
for_codex/tests/golden/phase1/: README.md
for_codex/tests/golden/phase1/blur_roundmode/: README.md  preset.avs
for_codex/tests/golden/phase1/brightness_exclude/: README.md  preset.avs
for_codex/tests/golden/phase1/color_mod/: hashes.txt
for_codex/tests/golden/phase1/fadeout_color/: README.md
for_codex/tests/golden/phase1/nested_metadata/: README.md
for_codex/tests/golden/phase1/simple/: hashes.txt
for_codex/tests/golden/phase1/superscope/: hashes.txt
src/: audio_dsp.c  audio_dsp.h  config.c  config.h  main.c
tools/: avi_writer.cpp  avi_writer.hpp  capture.cpp  capture.hpp  debug_log.cpp  debug_log.hpp  debug_trace.cpp  debug_trace.hpp  debug_trace_analyzer.py  diagnostics.cpp  diagnostics.hpp  generate_verification_data.cpp  manifest.cpp  manifest.hpp  sha256.cpp  sha256.hpp  spectrum.cpp  spectrum.hpp  vis_host.cpp  vis_host.hpp  wav_reader.cpp  wav_reader.hpp  windows_diagnostics.cpp  windows_diagnostics.hpp
